fixed form spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,6 +32,10 @@ h1 {
 h3 {
   color: #2e4057;
 }
+h4 {
+  color: #2e4057;
+  font-size: 1.4rem;
+}
 p {
   color: #2f2d2e;
   font-size: 1rem;
@@ -152,9 +156,9 @@ nav ul li {
   background-color: #7c7c7c;
   justify-content: space-between;
   align-items: center;
-  padding: 0 5%;
   color: #2f2d2e;
   padding: 2%;
+  height: 65px;
 }
 #createtaskbutton {
   background-color: #efc88b;
@@ -184,7 +188,6 @@ nav ul li {
   flex-direction: column;
   width: 100vw;
 }
-
 
 .tabpage > h3 {
   font-size: 2.0rem;
@@ -228,7 +231,7 @@ font-weight: bolder;
 
 .task-name {
   font-weight: bold;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   max-width: 300px;
 }
 
@@ -239,7 +242,6 @@ font-weight: bolder;
   width: 30px;
   height: 30px;
   border-style: none;
-  -webkit-tap-highlight-color: transparent;
 }
 
 .edit-delete {
@@ -266,18 +268,20 @@ font-weight: bolder;
   border-style: none;
 }
 
-
 form  { 
-  display: table;  
+  display: table;
+
 }
 form > p  { 
-  display: table-row;  
-  height: 40px;
+ display: table-row;  
+ height: 40px;
 }
-
+.padding {
+  padding: 5% 0;
+}
 label { 
-  display: table-cell; 
-  margin: 3% ;
+display: table-cell; 
+ margin: 3% ;
 }
 input { 
   display: table-cell; 
